--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -734,8 +734,8 @@
                                         <rect key="frame" x="480" y="17" width="47" height="36"/>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
                                         <state key="normal" title="Vecka">
-                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" red="0.77816506409999997" green="0.77816506409999997" blue="0.77816506409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="veckaButton:" destination="N1K-pk-cBC" eventType="touchUpInside" id="kPk-bT-3aL"/>
